--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -130,6 +130,30 @@
     }
   }
 
+  .version-switch {
+    display: flex;
+    height: 30px;
+    align-items: center;
+    background-color: rgba(124, 129, 163, 0.35);
+    border-radius: 10px;
+    padding: 0 8px;
+    font-size: 14px;
+    cursor: pointer;
+    color: $color-white;
+    margin-left: 10px;
+
+    &__logo {
+      height: 11px;
+      width: 12px;
+      background-image: url("/images/icons/switch-icon.png");
+      background-position: center center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: transparent;
+      margin-right: 5px;
+    }
+  }
+
   @include breakpoint("tablet-wide", max) {
     .nav-select {
       display: none;
@@ -164,6 +188,9 @@
       .search-select {
         width: 7rem;
       }
+    }
+    .version-switch {
+      display: none;
     }
   }
   @include breakpoint("phablet", max) {
@@ -366,6 +393,200 @@
     flex-direction: column;
     .nav-search {
       display: none;
+    }
+  }
+}
+
+.theta-header-v3 {
+  @include row($justify: space-between, $align: flex-start);
+  max-width: 1100px;
+  width: 90%;
+  margin: 0 auto 0;
+  padding: 1.5rem 0 0;
+
+  a {
+    text-decoration: none;
+  }
+
+  .nav {
+    display: flex;
+    flex: 1 0 auto;
+
+    .theta-logo {
+      flex: 0 0 7.25rem;
+      height: 2.5rem;
+      margin: 0 7% 0 0;
+
+      background: url("/images/logo_theta-explorer@2x.png");
+      @include backgroundImage($url: "/images/logo_theta-explorer@2x.png");
+    }
+
+    a.nav-item {
+      font-family: $font-title;
+      font-weight: $weight-bold;
+      padding: 0.65rem;
+      margin-right: 1%;
+
+      color: $color-font-main;
+      font-size: 14px;
+      line-height: 14px;
+      letter-spacing: 2.25px;
+
+      background: white;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      position: relative;
+      white-space: nowrap;
+      overflow: hidden;
+
+      &:hover {
+        @include linearHorizontalGradient($color-blue, $color-green);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+    }
+  }
+
+  .nav-search {
+    display: flex;
+    align-items: center;
+    color: $color-font-body;
+
+    .search-input {
+      width: 12rem;
+    }
+
+    .search-select {
+      width: 7rem;
+      margin: 0 5px;
+
+      &::after {
+        content: "";
+        width: 0;
+        height: 0;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 6px solid $color-input-text;
+        position: absolute;
+        right: 5px;
+        top: 12px;
+        pointer-events: none;
+      }
+
+      select {
+        height: 32px;
+        width: 100%;
+        display: inline-block;
+      }
+    }
+
+    .search-button {
+      height: 32px;
+      width: 24px;
+      padding-right: 4px;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      background-color: rgba(124, 129, 163, 0.35);
+    }
+
+    .svg-icon {
+      width: 80%;
+      height: 80%;
+      display: block;
+      margin: auto;
+    }
+
+    .svg-icon path,
+    .svg-icon polygon,
+    .svg-icon rect {
+      fill: $color-white;
+    }
+
+    .svg-icon circle {
+      stroke: $color-white;
+      stroke-width: 1;
+    }
+  }
+
+  .version-switch {
+    display: flex;
+    height: 30px;
+    align-items: center;
+    background-color: rgba(124, 129, 163, 0.35);
+    border-radius: 10px;
+    padding: 0 8px;
+    font-size: 14px;
+    cursor: pointer;
+    color: $color-white;
+    margin-left: 3px;
+
+    &__logo {
+      height: 11px;
+      width: 12px;
+      background-image: url("/images/icons/switch-icon.png");
+      background-position: center center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: transparent;
+      margin-right: 5px;
+    }
+  }
+
+  @include breakpoint("tablet-wide", max) {
+    .nav-search .search-input {
+      width: 10rem;
+    }
+    .nav-search .search-select {
+      width: 5rem;
+    }
+    .nav .theta-logo {
+      margin-right: 3%;
+    }
+    .nav a.nav-item {
+      margin-right: 1%;
+      letter-spacing: 0;
+    }
+  }
+  @include breakpoint("tablet", max) {
+    display: block;
+    .flex-spacer {
+      display: none;
+    }
+
+    .nav-search {
+      width: 80%;
+      margin: 3rem auto 0;
+      @include row($justify: center);
+      .search-input {
+        width: 80%;
+      }
+      .search-select {
+        width: 7rem;
+      }
+    }
+  }
+  @include breakpoint("phablet", max) {
+    width: 95%;
+    .nav .theta-logo {
+      margin-right: 3%;
+      flex: 0 0 6rem;
+    }
+    .nav-search {
+      margin: 0.5rem auto 0;
+    }
+    .nav a.nav-item {
+      letter-spacing: 0;
+      margin-right: 1%;
+    }
+    .version-switch {
+      display: none;
+    }
+  }
+  @include breakpoint("phone-small", max) {
+    .nav a.nav-item {
+      font-size: 0.8rem;
+      line-height: 0.8rem;
     }
   }
 }
