--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -98,6 +98,17 @@
   height: 20px;
   width: 20px;
   margin-right: 10px;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  &.theta {
+    background-image: url("/images/icons/icon-theta.png");
+  }
+
+  &.playground {
+    background-image: url("/images/icons/icon-playground.png");
+  }
 }
 
 .chain-name {
