--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -160,6 +160,12 @@
   &.replay {
     background-image: url("/images/logos/logo-replay.png");
   }
+  &.playground {
+    background-image: url("/images/logos/logo-playground.png");
+    height: 40px;
+    width: 100px;
+    margin-top: -10px;
+  }
 }
 
 .content.check {
