Update stake table layout

--- a/frontend/src/styles/components/_stakes-table.scss
+++ b/frontend/src/styles/components/_stakes-table.scss
@@ -14,6 +14,10 @@
     color: $color-font-light;
     width: 125px;
 
+    &.half {
+      width: 95px;
+    }
+
     &:before {
       content: '';
       display: inline-block;
