Add search bar on mobile UI

--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -389,11 +389,25 @@
   }
 
   @include breakpoint("phablet", max) {
-    height: 100px;
+    height: 130px;
     flex-direction: column;
-    .nav-search {
-      display: none;
+    justify-content: left;
+    &__navbar {
+      flex-wrap: wrap;
+      justify-content: left;
+      margin-top: 10px;
     }
+    .nav-search {
+      margin-left: 10px;
+      margin-top: 5px;
+      .search-button {
+        height: 30px;
+        margin-left: -1px;
+      }
+    }
+    // .nav-search {
+    //   display: none;
+    // }
   }
 }
 
