Update tfuel to vTfuel for subchains

--- a/frontend/src/styles/components/_blocks-table.scss
+++ b/frontend/src/styles/components/_blocks-table.scss
@@ -3,6 +3,11 @@ table.data.block-table {
   thead tr .height:before{
     height: 1px;
   }
+  thead tr th {
+    &.fee {
+      text-transform: none;
+    }
+  }
   tr .height { 
     width: 100px; 
     white-space: nowrap;
