--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -109,6 +109,15 @@
   &.playground {
     background-image: url("/images/icons/icon-playground.png");
   }
+
+  &.toonstar {
+    background-image: url("/images/icons/icon-toonstar.jpeg");
+    border-radius: 10px;
+  }
+
+  &.lavita {
+    background-image: url("/images/icons/icon-lavita.png");
+  }
 }
 
 .chain-name {
