--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -101,6 +101,7 @@
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
+  background-image: url("/images/icons/icon-theta.png");
 
   &.theta {
     background-image: url("/images/icons/icon-theta.png");
