--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -161,6 +161,7 @@
   background-color: transparent;
   &.theta {
     background-image: url("/images/logos/logo-theta-chain.png");
+    height: 20px;
   }
   &.replay {
     background-image: url("/images/logos/logo-replay.png");
