--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -143,9 +143,20 @@
         min-height: 60px;
         height: auto;
         align-items: center;
+        flex-direction: column;
         &--logo {
           margin-right: 10px;
           height: 20px;
+          margin-bottom: 10px;
+          .playground {
+            margin-left: -25px;
+          }
+          .toonstar {
+            margin-left: -17px;
+          }
+        }
+        &--description {
+          text-align: center;
         }
       }
     }
