Add lavita balance on the account detail page

--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -47,6 +47,11 @@
       background-image: url('/images/icons/icon_wtfuel.png'); 
     }
   }
+  &.lavita {
+    &:before {
+      background-image: url('/images/icons/icon-lavita.png'); 
+    }
+  }
 }
 
 .currency-link {
