Add replay subchain icon

--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -107,6 +107,10 @@
     background-image: url("/images/icons/icon-theta.png");
   }
 
+  &.replay {
+    background-image: url("/images/icons/icon-replay.png");
+  }
+
   &.playground {
     background-image: url("/images/icons/icon-playground.png");
   }
