--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -176,6 +176,7 @@
   }
   &.replay {
     background-image: url("/images/logos/logo-replay.png");
+    height: 20px;
   }
   &.playground {
     background-image: url("/images/icons/icon-playground.png");
