--- a/frontend/src/styles/components/_dashboard-row.scss
+++ b/frontend/src/styles/components/_dashboard-row.scss
@@ -300,7 +300,9 @@
     }
     &.tfuel {
       > :last-child {
-        display: none;
+        width: 80% !important;
+        height: 180px;
+        margin-left: 10%;
       }
     }
   }
