Display RPLAY token in the account detail page

--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -52,6 +52,11 @@
       background-image: url('/images/icons/icon-lavita.png'); 
     }
   }
+  &.rplay {
+    &:before {
+      background-image: url('/images/icons/icon-replay.png'); 
+    }
+  }
 }
 
 .currency-link {
