Add vLavita balance in the account detail page

--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -47,7 +47,7 @@
       background-image: url('/images/icons/icon_wtfuel.png'); 
     }
   }
-  &.lavita {
+  &.lavita, &.vlavita {
     &:before {
       background-image: url('/images/icons/icon-lavita.png'); 
     }
