--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -123,6 +123,10 @@
   &.lavita {
     background-image: url("/images/icons/icon-lavita.png");
   }
+
+  &.pog {
+    background-image: url("/images/icons/icon-pog.png");
+  }
 }
 
 .chain-name {
