--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -232,7 +232,7 @@
     height: 24px;
     width: 24px;
     &::after{
-      content: "POGCHAIAN";
+      content: "POGCHAIN";
       margin-left: 30px;
       display: flex;
       align-items: center;
