Add passaways logo and icon

--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -124,6 +124,10 @@
     background-image: url("/images/icons/icon-lavita.png");
   }
 
+  &.passaways {
+    background-image: url("/images/icons/icon-passaways.png");
+  }
+
   &.pog {
     background-image: url("/images/icons/icon-pog.png");
   }
