--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -178,6 +178,13 @@
     background-image: url("/images/logos/logo-replay.png");
     height: 20px;
   }
+  &.passaways {
+    background-image: url("/images/logos/logo-passaways.png");
+    height: 30px;
+    width: 120px;
+    background-size: 100%;
+    margin: -5px 0;
+  }
   &.playground {
     background-image: url("/images/icons/icon-playground.png");
     height: 24px;
