Add subchain about section

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -32,6 +32,7 @@
 @import 'components/dapp-card';
 @import 'components/chain-card';
 @import 'components/subchain_chart';
+@import 'components/subchain-about';
 
 // SECTIONS 
 @import 'sections/home';
