--- a/frontend/src/styles/components/_subchain-about.scss
+++ b/frontend/src/styles/components/_subchain-about.scss
@@ -14,8 +14,21 @@
     &--logo {
       margin: 22px 0;
       & .chain-logo.lavita {
-        height: 35px;
-        width: 35px;
+        height: 30px;
+        width: 30px;
+        &::after {
+          margin-left: 40px;
+          font-size: 20px;
+        }
+      }
+      & .chain-logo.replay {
+        height: 30px;
+        width: 120px;
+        background-size: contain;
+      }
+      & .chain-logo.pog {
+        height: 30px;
+        width: 30px;
         &::after {
           margin-left: 40px;
           font-size: 20px;
@@ -96,5 +109,30 @@
       // flex: 1;
       margin-right: 10px;
     }
+  }
+  @include breakpoint("phablet", max) {
+    flex-direction: column;
+    margin-left: 10%;
+    flex-wrap: wrap;
+
+    &__links {
+      padding-left: 0;
+      margin-top: 20px;
+      padding-top: 20px;
+      border-top: 1px solid rgba($color-font-light, 0.2);
+    }
+
+    &__sm {
+      margin-top: 10px;
+    }
+
+    // &__column {
+    //   width: 80%;
+    // }
+
+    // & > :first-child,
+    // > :last-child {
+    //   display: none;
+    // }
   }
 }
