--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -131,6 +131,10 @@
   &.pog {
     background-image: url("/images/icons/icon-pog.png");
   }
+
+  &.grove {
+    background-image: url("/images/icons/icon-grove.png");
+  }
 }
 
 .chain-name {
