--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -67,6 +67,11 @@
       background-image: url('/images/icons/icon-plasm.png'); 
     }
   }
+  &.grove {
+    &:before {
+      background-image: url('/images/icons/icon-grove.png'); 
+    }
+  }
 }
 
 .currency-link {
