Support multi evm versions option

--- a/frontend/src/styles/components/_smart-contract.scss
+++ b/frontend/src/styles/components/_smart-contract.scss
@@ -231,6 +231,9 @@
     $self: &;
     margin: 0 5px;
     z-index: 100;
+    &.select__selector {
+      width: auto;
+    }
     &.question-mark {
       display: inline-block;
       border: 1px solid $color-font-light;
