Add bullit related code

--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -135,6 +135,10 @@
   &.grove {
     background-image: url("/images/icons/icon-grove.png");
   }
+
+  &.bullit {
+    background-image: url("/images/icons/icon-bullit.jpeg");
+  }
 }
 
 .chain-name {
