--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -72,7 +72,7 @@
       background-image: url('/images/icons/icon-grove.png'); 
     }
   }
-  &.bullit {
+  &.wbult {
     &:before {
       background-image: url('/images/icons/icon-bullit.jpeg'); 
     }
