--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -1,80 +1,91 @@
 // Misc UI elements. Not a component, but reusable pieces that can be used globally
 
-
 .currency {
   display: flex;
   flex-wrap: wrap;
   &:before {
-    content: '';
+    content: "";
     display: inline-block;
     position: relative;
     width: 15px;
     height: 15px;
-    margin-right: .375rem;
+    margin-right: 0.375rem;
     top: 2px;
     background-position: center center;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url('/images/icons/token_default@2x.png')
+    background-image: url("/images/icons/token_default@2x.png");
   }
   &.tfuel,
   &.tfuelwei {
-    &:before { background-image: url('/images/icons/tfuel_flat.png'); }
+    &:before {
+      background-image: url("/images/icons/tfuel_flat.png");
+    }
   }
   &.theta,
   &.thetawei {
-    &:before { background-image: url('/images/icons/theta_flat.png'); }
-    &.left { float: left; }
+    &:before {
+      background-image: url("/images/icons/theta_flat.png");
+    }
+    &.left {
+      float: left;
+    }
   }
   &.tdrop {
-    &:before { background-image: url('/images/icons/tdrop_flat.png'); }
+    &:before {
+      background-image: url("/images/icons/tdrop_flat.png");
+    }
   }
   &.tbill {
     &:before {
-      background-image: url('/images/icons/tbill_token.png'); 
+      background-image: url("/images/icons/tbill_token.png");
     }
   }
   &.aura {
-    &:before { background-image: url('/images/icons/aura_token.png'); }
+    &:before {
+      background-image: url("/images/icons/aura_token.png");
+    }
   }
   &.wtheta {
     &:before {
-      background-image: url('/images/icons/icon_wtheta.png'); 
+      background-image: url("/images/icons/icon_wtheta.png");
     }
   }
   &.wtfuel {
     &:before {
-      background-image: url('/images/icons/icon_wtfuel.png'); 
+      background-image: url("/images/icons/icon_wtfuel.png");
     }
   }
-  &.lavita, &.vlavita {
+  &.lavita,
+  &.vlavita {
     &:before {
-      background-image: url('/images/icons/icon-lavita.png'); 
+      background-image: url("/images/icons/icon-lavita.png");
     }
   }
   &.rplay {
     &:before {
-      background-image: url('/images/icons/icon-replay.png'); 
+      background-image: url("/images/icons/icon-replay.png");
     }
   }
   &.pog {
     &:before {
-      background-image: url('/images/icons/icon-pog.png'); 
+      background-image: url("/images/icons/icon-pog.png");
     }
   }
   &.plasm {
     &:before {
-      background-image: url('/images/icons/icon-plasm.png'); 
+      background-image: url("/images/icons/icon-plasm.png");
     }
   }
   &.grove {
     &:before {
-      background-image: url('/images/icons/icon-grove.png'); 
+      background-image: url("/images/icons/icon-grove.png");
     }
   }
-  &.wbult {
+  &.wbult,
+  &.bult {
     &:before {
-      background-image: url('/images/icons/icon-bullit.jpeg'); 
+      background-image: url("/images/icons/icon-bullit.jpeg");
     }
   }
 }
@@ -93,7 +104,7 @@ body.show-modal {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba($color-black, .95);
+  background: rgba($color-black, 0.95);
   .modal-close {
     display: block;
     position: absolute;
@@ -102,11 +113,11 @@ body.show-modal {
     z-index: 100;
     width: 50px;
     height: 50px;
-    background-image: url('/images/close_button@2x.png');
+    background-image: url("/images/close_button@2x.png");
     background-position: center center;
     background-size: contain;
     background-repeat: no-repeat;
-    background-color: rgba($color-white, .05);
+    background-color: rgba($color-white, 0.05);
     border-radius: 50%;
   }
   .modal-content {
@@ -114,7 +125,7 @@ body.show-modal {
     height: 100%;
     overflow-y: auto;
   }
-  @include breakpoint('phablet', max) {
+  @include breakpoint("phablet", max) {
     .modal-content {
       padding: 1rem;
     }
